--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.3"
+    "@fontsource-variable/karla": "^5.2.5",
+    "@fontsource-variable/montserrat": "^5.2.5",
+    "@tailwindcss/vite": "^4.0.14",
+    "astro": "^5.5.3",
+    "leaflet": "^1.9.4",
+    "tailwindcss": "^4.0.14"
   }
 }
