--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@fontsource-variable/karla": "^5.2.5",
     "@fontsource-variable/montserrat": "^5.2.5",
+    "@iconify-json/material-symbols-light": "^1.2.17",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/mdi-light": "^1.2.2",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
+    "astro-icon": "^1.1.5",
     "leaflet": "^1.9.4",
     "tailwindcss": "^4.0.14"
   }
