--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.1.3",
     "@fontsource-variable/karla": "^5.2.5",
     "@fontsource-variable/montserrat": "^5.2.5",
     "@iconify-json/material-symbols-light": "^1.2.17",
