--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.9",
     "@astrojs/vercel": "^8.1.3",
+    "@emailjs/nodejs": "^5.0.2",
     "@fontsource-variable/karla": "^5.2.5",
     "@fontsource-variable/montserrat": "^5.2.5",
     "@iconify-json/material-symbols-light": "^1.2.17",
@@ -19,6 +21,8 @@
     "astro": "^5.5.3",
     "astro-icon": "^1.1.5",
     "leaflet": "^1.9.4",
-    "tailwindcss": "^4.0.14"
+    "svelte": "^5.25.7",
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.3"
   }
 }
