--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
     "astro-icon": "^1.1.5",
+    "flowbite": "^3.1.2",
     "leaflet": "^1.9.4",
     "svelte": "^5.25.7",
     "tailwindcss": "^4.0.14",
